--- a/styles/styles.css
+++ b/styles/styles.css
@@ -579,14 +579,12 @@ h1,
    }
 
    /* Set the input field to look kinda opaque    */
-   #enquire .input_text {
+   /* #enquire .input_text {
      opacity: 0.5;
-     width: 100%;
-     /* height: 2%; */
-     padding: 1.5em;
+     width: 80%;
      align-self: center;
      margin-bottom: 2%;
-   }
+   }  */
 
    /* The text over each input is style here   */
    #enquire .text_Float_left {
@@ -600,61 +598,25 @@ h1,
    }
 
 
-   /*2 equal collums*/
+   /*3 equal collums*/
 
    #enquire * {
-     box-sizing: border-box;
-   }
-
-   /* Create two equal columns that floats next to each other */
-   #enquire .column {
-     float: left;
-     width: 49%;
-     margin: 1% 0% 1% 0%;
-     text-align: center;
-   }
-
-   /* setting for elements on the right */
-   #enquire .column2 {
-     float: left;
-     width: 49%;
-     margin: 1% 0% 1% 1.9%;
-     text-align: center;
-   }
-
-   /* Clear floats after the columns */
-   #enquire .row_01:after {
-     content: "";
-     display: table;
-     clear: both;
-   }
-
-   /* separate row 2 and 1 */
-   #enquire .row2 {
-     margin-bottom: 1%;
-   }
-
-   #enquire .row2:after {
-     content: "";
-     display: table;
-     clear: both;
-   }
-
-   /* Styling the Less crucial info namely border and input field   */
-   #enquire #fieldSet2 {
-     border-style: none;
-   }
-
-
-   /* setting for the first personal detail section */
-   #enquire .input_text_2 {
-     opacity: 0.5;
-     width: 100%;
-     /* height: 2%; */
-     padding: 1.5em;
-     align-self: center;
-     margin-bottom: 1%;
-   }
+    box-sizing: border-box;
+  }
+  
+  /* Create three equal columns that floats next to each other */
+  #enquire .column {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+  }
+  
+  /* Clear floats after the columns */
+  #enquire .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 
    /* Disable arrow */
 
