--- a/styles/styles.css
+++ b/styles/styles.css
@@ -582,10 +582,59 @@ h1,
     #enquire .input_text {
       opacity: 0.5;
       width: 100%;
-      /* height: 2%; */
+      height: 100%;
+      align-self: center;
+      border-style: none;
+      text-align: center;
+      font-size: 1em;
+    }
+
+                                                                 /* Testing table */
+                                                                 #enquire table th {
+                                                                  border-radius: 5px;
+                                                                  background-color: lightgrey;
+                                                                 }
+
+                                                                 #enquire table tr td {
+                                                                  height: 90px;
+                                                                 }
+
+                                                                 #enquire table .header_product_1 {
+                                                                  width:75%;
+                                                                  font-size: 2em;
+                                                                  
+                                                                 }
+
+                                                                 #enquire table .header_product_2 {
+                                                                  width:20%;
+                                                                  font-size: 2em;
+                                                                  
+                                                                 }
+
+                                                                 #enquire table .header_product_3 {
+                                                                  width:10%;
+                                                                  font-size: 2em;
+                                                                  
+                                                                 }
+
+
+                                                                 #enquire .actual_product {
+                                                                  font-size: 1.5em;
+                                                                 }
+
+                                                                 #enquire .actual_product_2 {
+                                                                  font-size: 1.5em;
+                                                                  text-align: center;
+                                                                 }
+                                                                 /* Testing */
+
+    /* setting for the first personal detail section */
+    #enquire .input_text_2 {
+      opacity: 0.5;
+      width: 100%;
       padding: 1.5em;
       align-self: center;
-      margin-bottom: 2%;
+      margin-bottom: 1%;
     }
  
     /* The text over each input is style here   */
@@ -639,29 +688,10 @@ h1,
       display: table;
       clear: both;
     }
- 
+
     /* Styling the Less crucial info namely border and input field   */
     #enquire #fieldSet2 {
       border-style: none;
-    }
- 
- 
-    /* setting for the first personal detail section */
-    #enquire .input_text_2 {
-      opacity: 0.5;
-      width: 100%;
-      /* height: 2%; */
-      padding: 1.5em;
-      align-self: center;
-      margin-bottom: 1%;
-    }
- 
-    /* Disable arrow */
- 
-    #enquire input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
     }
  
     /* ************** */
@@ -748,22 +778,9 @@ h1,
       width: 20px;
     }
  
-    /* Textarea   */
-    #enquire textarea {
-      line-height: 10vh;
-      width: 100%;
-      padding: 4%;
-      font-size: 1.3em;
-    }
- 
-    /* set font size for text area placeholder */
-    #enquire textarea::placeholder {
-      font-size: 1.4em;
-    }
- 
     /* attribute selector to adjust all text inputs font size */
     #enquire input [type="text"] {
-      font-size: 1.5em;
+      font-size: 2em;
     }
  
     /* Submit button styling  */
@@ -785,7 +802,7 @@ h1,
     }
  
     /* Validation of entered value in input  */
-    #enquire input:not(:placeholder-shown):invalid {
+    #enquire .input_text_2:not(:placeholder-shown):invalid {
       border: 5px solid #ff0000;
     }
 
