--- a/styles/styles.css
+++ b/styles/styles.css
@@ -763,10 +763,7 @@ h1,
       transform: scale(1.2);
     }
  
-    /* Validation of entered value in input  */
-    #enquire .input_text_2:not(:placeholder-shown):invalid {
-      border: 5px solid #ff0000;
-    }
+    
 
    /* Sets the width and height of the banner image */
    #index .featured_banner img {
@@ -1204,3 +1201,20 @@ h1,
      font-size: 0.75vw !important;
    }
  }
+
+ #enquire .warning {
+  background-color: pink !important; 
+  border: red solid 1px;
+  text-align: center;
+  margin-bottom: 2%;
+ }
+
+ #enquire .warning h2 {
+  border: none;
+  padding-bottom: 0%;
+ }
+
+ /* Validation of entered value in input  */
+ #enquire .invalid {
+  border: 4px solid #ff0000;
+  }
