--- a/styles/enhancements.css
+++ b/styles/enhancements.css
@@ -548,6 +548,15 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
     clear: both;
   }
 
+    /* State styling   */
+    #enquire #cAdr {
+      width: 100%;
+      padding: 1.5em;
+      border-radius: 10px;
+      opacity: 0.5;
+      margin: 0% 0% 2% 0%;
+    }
+
   /* Preferred Card type*/
   #enquire .precon_label {
     display: flex;
@@ -608,6 +617,18 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   #enquire input [type="text"] {
     font-size: 1.5em;
   }
+
+    /* Textarea   */
+    #enquire textarea {
+      line-height: 10vh;
+      width: 100%;
+      padding: 4%;
+      font-size: 1.3em;
+    }
+
+    #enquire textarea::placeholder {
+      font-size: 1.4em;
+    }
 
   /* Submit button styling  */
   #enquire .submit {
@@ -1609,6 +1630,15 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
     clear: both;
   }
 
+    /* State styling   */
+    #enquire #cAdr {
+      width: 100%;
+      padding: 1.5em;
+      border-radius: 10px;
+      opacity: 0.5;
+      margin: 0% 0% 2% 0%;
+    }
+
   /* Preferred Card type */
   #enquire .precon_label {
     display: flex;
@@ -1669,6 +1699,18 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
 /* attribute selector to adjust all text inputs font size */
   #enquire input [type="text"] {
     font-size: 1.5em;
+  }
+
+  /* Textarea   */
+  #enquire textarea {
+    line-height: 10vh;
+    width: 100%;
+    padding: 4%;
+    font-size: 1.3em;
+  }
+
+  #enquire textarea::placeholder {
+    font-size: 1.4em;
   }
 
   /* Submit button styling  */
