--- a/styles/styles.css
+++ b/styles/styles.css
@@ -766,6 +766,11 @@ h1,
   #enquire textarea::placeholder {
     font-size: 1.4em;
   }
+
+     /* Validation of entered value in input  */
+     #enquire input:not(:placeholder-shown):invalid {
+      border: 5px solid #ff0000;
+    }
  
     /* Submit button styling  */
     #enquire .submit {
