--- a/styles/enhancements.css
+++ b/styles/enhancements.css
@@ -631,9 +631,9 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
     }
 
          /* Validation of entered value in input  */
-         #enquire .input_text_2:not(:placeholder-shown):invalid {
+         /* #enquire .input_text_2:not(:placeholder-shown):invalid {
           border: 5px solid #ff0000;
-        }
+        } */
 
   /* Submit button styling  */
   #enquire .submit {
@@ -1738,9 +1738,9 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   }
 
        /* Validation of entered value in input  */
-       #enquire .input_text_2:not(:placeholder-shown):invalid {
+       /* #enquire .input_text_2:not(:placeholder-shown):invalid {
         border: 5px solid #ff0000;
-      }
+      } */
 
   /* Submit button styling  */
   #enquire .submit {
