--- a/styles/enhancements.css
+++ b/styles/enhancements.css
@@ -465,7 +465,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
     width: 100%;
     padding: 1.5em;
     align-self: center;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
   }
 
 /* Table */
@@ -611,6 +611,15 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   #enquire .checkbox {
     height: 15px;
     width: 15px;
+  }
+
+  /* Select Book   */
+  #enquire .book {
+    width: 15%;
+    padding: 0.5em;
+    border-radius: 10px;
+    margin-bottom: 4%;
+    margin-left: 2%;
   }
 
 /* attribute selector to adjust all text inputs font size */
@@ -1570,7 +1579,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
     width: 100%;
     padding: 1.5em;
     align-self: center;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
   }
 
 /* Table */
@@ -1723,6 +1732,19 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
 /* attribute selector to adjust all text inputs font size */
   #enquire input [type="text"] {
     font-size: 1.5em;
+  }
+
+  #enquire .book {
+    width: 98%;
+    padding: 0.3em;
+    border-radius: 10px;
+    margin-bottom: 4%;
+    /* margin-left: 2%; */
+    
+  }
+
+  #enquire select option {
+    font-size: 1em;;
   }
 
   /* Textarea   */
