--- a/styles/styles.css
+++ b/styles/styles.css
@@ -595,11 +595,11 @@ h1,
  
     /* Set the input field to look kinda opaque    */
     #enquire .input_text {
-      opacity: 0.5;
-      width: 100%;
-      height: 100%;
+    
+      width: 5%;
+      
       align-self: center;
-      border-style: none;
+      margin-left: 2%;
       text-align: center;
       font-size: 1.5em;
     }
@@ -612,6 +612,12 @@ h1,
      align-self: center;
      margin-bottom: 2%;
     }
+
+    #enquire .quantity_align {
+      margin-left: 4%;
+    }
+
+    
 
     /* Testing table */
 #enquire table, th, td {
@@ -701,12 +707,12 @@ h1,
     }
 
     #enquire .book {
-      width: 10%;
+      width: 33%;
       padding: 0.5em;
       border-radius: 10px;
       margin-bottom: 2%;
       margin-left: 2%;
-      max-width: 10%;
+     
     }
 
     #enquire .select_test {
